7月11阶段性提交

--- a/线框图jpg/线框图html/官网/html/体验店.html
+++ b/线框图jpg/线框图html/官网/html/体验店.html
@@ -29,15 +29,15 @@
       <td>
           <div class="pull-right">
                 <table>
-                  <tr>
-                    <td >
-                        <a href="首页.html" >首页</a>
-                        <div class="point"></div>
-                    </td>
+                  <tr> 
                       <td >
-                        <a href="产品图.html" >产品</a>
+                        <a href="产品图.html" >Cast</a>
                         <div class="point"></div>
                     </td>
+                     <td>
+                        <a href="服务.html" >服务</a>
+                        <div class="point"></div>
+                      </td>
                       <td class="active">
                         <a href="体验店.html" >体验店</a>
                         <div class="point"></div>
@@ -45,12 +45,7 @@
                       <td>
                         <a href="" >社区</a>
                         <div class="point"></div>
-                    </td>
-                      <td>
-                        <a href="服务.html" >服务</a>
-                        <div class="point"></div>
-                      </td>
-
+                    </td> 
                       <td class="td_mall">
                         <a href="企业图.html" >商城</a>
                       </td>
@@ -198,6 +193,13 @@
               <td class="first">
                   <a href="">Cast客户端</a>
               </td>  
+              <td rowspan="7" class="td_online">
+                <div class="online-div">
+                  <img class="online-img" src="../static/img/online.png" alt="" />
+                  <p class="phone">400-820-5555</p>
+                  <p>{24小时服务热线}</p>
+                </div>
+              </td>
             </tr>
              <tr >
               <td>
@@ -314,13 +316,14 @@
     </div><!-- end items -->
     <!-- end link footer -->
     <!-- footer content -->
-        <footer >
-          <div class="container">
-          <div class="pull-right">
+       <footer>
+          <div class="pull-left">
             Beijing ASU Tech Co.Ltd 北京一数科技有限公司|法律声明|隐私条款 <a href="">京ICP备15036919号-1 </a>
           </div>
-          <div class="clearfix"></div>
+           <div class="pull-right">
+             <a href=""><img src="../static/img/iconsfooter.png" /></a>
           </div>
+          <div class="clearfix"></div>
         </footer>
     <!-- /footer content -->
  
