--- a/线框图jpg/线框图html/官网/html/登录页面.html
+++ b/线框图jpg/线框图html/官网/html/登录页面.html
@@ -46,8 +46,11 @@
     </div >
     <!-- footer content -->
         <footer>
-          <div class="pull-center">
+          <div class="pull-left">
             Beijing ASU Tech Co.Ltd 北京一数科技有限公司|法律声明|隐私条款 <a href="">京ICP备15036919号-1 </a>
+          </div>
+           <div class="pull-right">
+             <a href=""><img src="../static/img/iconsfooter.png" /></a>
           </div>
           <div class="clearfix"></div>
         </footer>
