--- a/线框图jpg/线框图html/官网/html/下载页面.html
+++ b/线框图jpg/线框图html/官网/html/下载页面.html
@@ -154,13 +154,14 @@
       </table>
 　  </div>  
     <!-- footer content -->
-        <footer >
-          <div class="container">
-          <div class="pull-right">
+       <footer>
+          <div class="pull-left">
             Beijing ASU Tech Co.Ltd 北京一数科技有限公司|法律声明|隐私条款 <a href="">京ICP备15036919号-1 </a>
           </div>
-          <div class="clearfix"></div>
+           <div class="pull-right">
+             <a href=""><img src="../static/img/iconsfooter.png" /></a>
           </div>
+          <div class="clearfix"></div>
         </footer>
     <!-- /footer content -->
  
