根据客户反馈的意见进行了修改

--- a/线框图jpg/线框图html/官网/html/下载页面.html
+++ b/线框图jpg/线框图html/官网/html/下载页面.html
@@ -21,7 +21,7 @@
       <tr>
       <td>
           <div>
-            <img src="../static/img/logo.png"/>
+            <img class="logo" src="../static/img/logo.png"/>
           </div>
       </td>
       <td>
