--- a/线框图jpg/线框图html/官网/html/注册页面.html
+++ b/线框图jpg/线框图html/官网/html/注册页面.html
@@ -20,7 +20,7 @@
     <div class="container content">
         <div class="row">
             <div class="col-sx-12 col-sm-12 col-md-8 col-lg-8 text-center" >
-              <a href="首页.html">  <img src="../static/img/logo.png"/></a>
+              <a href="首页.html">  <img class="logo" src="../static/img/logo.png"/></a>
             </div>
             <div class="col-sx-12 col-sm-12 col-md-4 col-lg-4" >
                 <div class="panel panel-default">
