--- a/线框图jpg/线框图html/官网/html/首页.html
+++ b/线框图jpg/线框图html/官网/html/首页.html
@@ -13,7 +13,7 @@
     <link href="../vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="../static/css/base.css"  rel="stylesheet">
     <link href="../static/css/hostpage.css"  rel="stylesheet">
-    <link rel="stylesheet" href="../static/plugins/swiper-3.4.1/css/swiper.min.css">
+    <link rel="stylesheet" href="../static/plugins/swiper-3.4.1/css/swiper.css">
   </head>
 
   <body>
@@ -24,7 +24,7 @@
         <td>
             <div>
               <a href="首页.html">
-              <img src="../static/img/logo.png"/>
+              <img class="logo" src="../static/img/logo.png"/>
               </a>
             </div>
         </td>
@@ -32,7 +32,7 @@
             <div class="pull-right">
                   <table>
                     <tr>
-                        <td class="active a_product" >
+                        <td class=" a_product" >
                           <a href="产品图.html" >Cast</a>
                           <div class="point"></div>
                       </td>
@@ -52,15 +52,9 @@
                           <a href="企业图.html" >商城</a>
                           <div class="point"></div>
                         </td>
-
+ 
                         <td class="small-padding">
-                          <li class="fa fa-search"></li>
-                        </td>
-
-                        <td class="small-padding">
-                          <a href="登录页面.html">
-                          <li class="fa fa-user"></li>
-                          </a>
+                          
                           <a href="" >中文|EN</a>
                         </td> 
                       
@@ -77,10 +71,10 @@
        <div class="panel panel-default sec_menu store_sec_menu panel-body-transparent">
                     <div class="panel-body "> 
                       <div>
-                        <a class="a_img" href="体验店.html"> 
+                        <a class="a_img" href="成为授权经销商.html"> 
                           <img class="store_img_hove"  src="../static/img/store.png" />
                           </a>
-                        <a class="a_img" href="成为授权经销商.html" > 
+                        <a class="a_img" href="体验店.html" > 
                           <img class="bussiness_img_hove" src="../static/img/bussiness.png" />
                         </a>
                       </div>
