--- a/线框图jpg/线框图html/官网/html/base-菜单ready.html
+++ b/线框图jpg/线框图html/官网/html/base-菜单ready.html
@@ -20,7 +20,7 @@
       <tr>
       <td>
           <div>
-            <img src="../static/img/logo.png"/>
+            <img class="logo" src="../static/img/logo.png"/>
           </div>
       </td>
       <td>
@@ -53,7 +53,7 @@
                       </td>
 
                       <td class="small-padding">
-                        <li class="fa fa-user"></li>
+                       
                       </td> 
                       <td class="small-padding">
                         <a href="" >EN</a>
