--- a/线框图jpg/线框图html/官网/html/找回密码.html
+++ b/线框图jpg/线框图html/官网/html/找回密码.html
@@ -19,7 +19,7 @@
     <div class="container content">
         <div class="row">
             <div class="col-sx-12 col-sm-12 col-md-8 col-lg-8 text-center" >
-              <img src="../static/img/logo.png"/>
+              <img class="logo" src="../static/img/logo.png"/>
             </div>
             <div class="col-sx-12 col-sm-12 col-md-4 col-lg-4" >
                 <div class="panel panel-default">
