修改了分页文件

--- a/线框图jpg/线框图html/官网/html/媒体报道.html
+++ b/线框图jpg/线框图html/官网/html/媒体报道.html
@@ -15,6 +15,7 @@
     <link href="../static/css/footer.css"  rel="stylesheet">
     <link href="../static/css/service.css"  rel="stylesheet"> 
     <link href="../static/css/news.css"  rel="stylesheet"> 
+    <link href="../static/css/pagination.css"  rel="stylesheet"> 
     <link rel="stylesheet" href="../static/plugins/swiper-3.4.1/css/swiper.css">
   </head>
 
