--- a/线框图jpg/论坛_07_04/论坛_0705/帖子详情.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/帖子详情.html
@@ -6,70 +6,7 @@
 <link rel="stylesheet" type="text/css" media="screen" href="css/swiper-3.4.2.min.css" />
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="css/base.css">
-<style>
-.title{
-	margin-bottom:5px;
-}
-
-dl{
-	margin-bottom:5px;
-}
-.number
-{
-    font-size: 20px;
-    color:#FF9556;
-}
-
-.div_posted{
-	background-color:#FF9556;
-	margin-top:5px;
-	color:#fff;
-}
-
-.sign{
-	border:#FF9556 solid 1px;
-	color:#FF9556;
-}
-
-.header{/*菜单*/
-	width:1200px;
-	margin:0px auto;
-	padding:0px;
-} 
-.warp_top
-{
-    padding: 30px;
-}
-.user_con
-{
-    padding: 30px;
-}
-.div_center table
-{
-
-    margin: 0 auto;
-}
-.bgcolor
-{
-    width: 200px;
-    height: 200px;
-    margin: 0 auto;
-}
-
-.right{
-    border: 1px solid #d6d6d6;
-}
-
-.right_holder
-{
-    padding: 40px;
-}
-.clearfix_border
-{
-    padding-bottom: 5px;
-    border-bottom:  2px solid #d6d6d6;
-}
-</style>
+<link rel="stylesheet" href="css/details.css">  
 </head>
 <body >
 <nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation" >
