--- a/线框图jpg/论坛_07_04/论坛_0705/规则.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/规则.html
@@ -6,6 +6,7 @@
 <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" media="screen" href="css/swiper.css" />
 <link href="css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="css/active.css"> 
 <link href="dist/summernote.css" rel="stylesheet">
 <link href="css/pagination.css" rel="stylesheet">
 <link rel="stylesheet" href="css/base.css">
@@ -15,32 +16,29 @@
 <nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation" >
     <div class="header">
         <div class="navbar-header"> <a href="#"> <img class="logo" alt="Brand" src="img/logo.png"> </a> </div>
-        <ul class="nav navbar-nav navbar-right">
-            <li ><a href="论坛首页.html">论坛首页<span class="sr-only">(current)</span></a></li>
+         <ul class="nav navbar-nav navbar-right">
+            <li ><a href="论坛首页.html">论坛首页<span class="sr-only">(current)</span></a></li> 
             <li ><a href="cast_ii_社区.html">Cast II 社区<span class="sr-only">(current)</span></a></li>
             <li class="active"><a href="活动列表.html">活动<span class="sr-only">(current)</span></a></li>
-            <li><a href="服务.html">服务<span class="sr-only">(current)</span></a></li>
+            <li ><a href="服务.html">服务<span class="sr-only">(current)</span></a></li> 
             <li><a href="#">进入商城<span class="sr-only">(current)</span></a></li>
             <li><a href="#">官网<span class="sr-only">(current)</span></a></li>
             <li><a href="#">软件下载<span class="sr-only">(current)</span></a></li>
             <li>
-                <div class="login_holder"> <a href="#">登录</a>|<a href="#">注册</a> </div>
+                <div class="login_holder">
+                <a href="#">登录</a>|<a href="#">注册</a>
+                </div>
             </li>
-            <li> </span> <span class="sr-only">(current)</span></a></li>
+            <li> </span>
+            <span class="sr-only">(current)</span></a></li>
         </ul>
     </div>
 </nav>
 <div class="wrap">
     <div class="left_warp">
-        <div class="left_nav">
-            <ul class="nav nav-tabs">
-                <li role="presentation"><a href="#"><strong class="font_color">全部</strong></a></li>
-                <li role="presentation"><a href="#">官方活动</a></li>
-                <li role="presentation"><a href="#">同城活动</a></li>
-            </ul>
-        </div>
+        
         <div class="left_bottom"> <span class="my_label">楼主</span><span class="pull-right"><a href="活动列表.html"><i class="fa fa-angle-left" aria-hidden="true"></i>返回</a></span>
-            <h3 class="font_color">为了这一天我们等了400天</h3>
+            <h3 class="font_color">社区版规</h3>
             <div class="time"> 发布： <span class="">2017-07-09&nbsp;16:22:38</span> <span class="pull-right"> <i class="fa fa-eye" aria-hidden="true"></i>3 <i class="fa fa-commenting my_fa" aria-hidden="true"></i>3 <i class="fa fa-heart my_fa" aria-hidden="true"></i>3 <i class="fa fa-share-alt my_fa" aria-hidden="true"></i>3 </span> </div>
             <div>这里是多行文本内容，这里是多行文本内容，这里是多行文本内容，这里是多行文本内容，这里是多行文本内容，这里是多行文本内容这里是多行文本内容这里是多行文本内容这里是多行文本内容这里是多行文本内容 </div>
         </div>
@@ -170,7 +168,10 @@
 	</div>
 </div>
 <div class="footer">
-    <div class="code"> <img class="code_img" src="img/code1.png" /> <img class="code_img" src="img/code2.png" /> </div>
+    <div class="code">
+	<img class="code_img" src="img/code1.png" />
+	<img class="code_img" src="img/code2.png" />
+	</div>
     <ul class="footer_nav">
         <li><a href="">一数官网</a></li>
         <li><a href="">一数商城</a></li>
@@ -184,7 +185,7 @@
         <li><a href="规则.html">社区规则</a></li>
     </ul>
 </div>
-<script src="js/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script> 
 <script src="js/bootstrap.min.js"></script>
 <script src="js/footer.js"></script>
 <script src="dist/summernote.js"></script>
