--- a/线框图jpg/线框图html/官网/html/企业图.html
+++ b/线框图jpg/线框图html/官网/html/企业图.html
@@ -297,6 +297,7 @@
     <script src="../vendors/bootstrap/dist/js/bootstrap.min.js"></script>   
      <!-- Initialize Swiper -->
      <script src="../static/js/base.js"></script>   
+     <script src="../static/js/menu.js"></script>   
     <script>
    
     </script>
