--- a/线框图jpg/论坛_07_04/论坛_0705/活动列表.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/活动列表.html
@@ -16,7 +16,7 @@
     <!-- 菜单**开始 -->
     <nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
         <div class="container">
-            <div class="row">
+            <div class="row"></div>
                 <div class="navbar-header">
                     <a href="#">
                         <img class="logo" alt="Brand" src="img/logo.png"> </a>
