--- a/线框图jpg/论坛_07_04/论坛_0705/论坛首页.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/论坛首页.html
@@ -436,7 +436,7 @@
                         </div>
                         <div class="clearfix">
                             <div class="pull-left">
-                                <img class="qr_code" src="img/tap.jpg">
+                                <img class="qr_code" src="img/qrcode.bmp">
                             </div>
                             <div class="pull-left contact_weixin">
                                 <h4>
