--- a/线框图jpg/论坛_07_04/论坛_0705/技术支持.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/技术支持.html
@@ -15,11 +15,11 @@
     <div class="header">
         <div class="navbar-header"> <a href="#"> <img class="logo" alt="Brand" src="img/logo.png"> </a> </div>
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="产品论坛.html">产品<span class="sr-only">(current)</span></a></li>
+            <li><a href="产品论坛.html">产品</a></li>
             <li><a href="技术支持.html">技术支持</a></li>
-            <li><a href="cast_ii_社区.html">案例展示<span class="sr-only">(current)</span></a></li>
-            <li><a href="#">进入商城<span class="sr-only">(current)</span></a></li>
-            <li ><a href="#">官网<span class="sr-only">(current)</span></a></li> 
+            <li><a href="cast_ii_社区.html">案例展示</a></li>
+            <li><a href="#">进入商城</a></li>
+            <li ><a href="#">官网</a></li> 
 			<li >
                 <div class="login_holder">
                 <a href="#">登录</a><a href="#">|申请成为开发者</a>
