--- a/线框图jpg/论坛_07_04/论坛_0705/规则.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/规则.html
@@ -17,20 +17,19 @@
     <div class="header">
         <div class="navbar-header"> <a href="#"> <img class="logo" alt="Brand" src="img/logo.png"> </a> </div>
          <ul class="nav navbar-nav navbar-right">
-            <li ><a href="论坛首页.html">论坛首页<span class="sr-only">(current)</span></a></li> 
-            <li ><a href="cast_ii_社区.html">Cast II 社区<span class="sr-only">(current)</span></a></li>
-            <li class="active"><a href="活动列表.html">活动<span class="sr-only">(current)</span></a></li>
-            <li ><a href="服务.html">服务<span class="sr-only">(current)</span></a></li> 
-            <li><a href="#">进入商城<span class="sr-only">(current)</span></a></li>
-            <li><a href="#">官网<span class="sr-only">(current)</span></a></li>
-            <li><a href="#">软件下载<span class="sr-only">(current)</span></a></li>
+            <li ><a href="论坛首页.html">论坛首页</a></li> 
+            <li ><a href="cast_ii_社区.html">Cast II 社区</a></li>
+            <li class="active"><a href="活动列表.html">活动</a></li>
+            <li ><a href="服务.html">服务</a></li> 
+            <li><a href="#">进入商城</a></li>
+            <li><a href="#">官网</a></li>
+            <li><a href="#">软件下载</a></li>
             <li>
                 <div class="login_holder">
                 <a href="#">登录</a>|<a href="#">注册</a>
                 </div>
             </li>
-            <li> </span>
-            <span class="sr-only">(current)</span></a></li>
+            
         </ul>
     </div>
 </nav>
