--- a/线框图jpg/论坛_07_04/论坛_0705/开发者论坛2.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/开发者论坛2.html
@@ -5,7 +5,7 @@
 <title>论坛首页</title>
 
 <link rel="stylesheet" type="text/css" media="screen" href="css/swiper-3.4.2.min.css" />
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="css/base.css">
 <link rel="stylesheet" href="css/forum2.css">
  
