--- a/线框图jpg/论坛_07_04/论坛_0705/cast_ii_社区.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/cast_ii_社区.html
@@ -6,7 +6,7 @@
     <title>cast_ii_社区</title>
     <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="css/swiper.css" />
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="css/pagination.css" rel="stylesheet">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/hostpage.css">
