--- a/线框图jpg/论坛_07_04/论坛_0705/js/plugins/bootstrap-wysiwyg/examples/html-editor.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/js/plugins/bootstrap-wysiwyg/examples/html-editor.html
@@ -6,7 +6,7 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>A tiny, opensource, Bootstrap WYSIWYG rich text editor</title>	
 		<link href="../bower_components/google-code-prettify/src/prettify.css" rel="stylesheet" />
-		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap/bootstrap.min.css" />
 		<link href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet" />
 		<link href="../css/style.css" rel="stylesheet" />
 	</head>
