--- a/线框图jpg/论坛_07_04/论坛_0705/发帖.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/发帖.html
@@ -4,7 +4,7 @@
 <meta http-equiv="con-Type" con="text/html; charset=utf-8" />
 <title>论坛首页|发帖</title> 
 <link rel="stylesheet" type="text/css" media="screen" href="css/swiper.css" />
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
 <link href="js/plugins/rich/jquery-te-1.4.0.css" rel="stylesheet">
 <link rel="stylesheet" href="css/base.css">
 <link rel="stylesheet" href="css/publish.css">
