--- a/线框图jpg/论坛_07_04/论坛_0705/规则.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/规则.html
@@ -5,7 +5,7 @@
 <title>论坛</title>
 <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" media="screen" href="css/swiper.css" />
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="css/active.css"> 
 <link href="dist/summernote.css" rel="stylesheet">
 <link href="css/pagination.css" rel="stylesheet">
