--- a/线框图jpg/论坛_07_04/论坛_0705/论坛首页.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/论坛首页.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta http-equiv="con-Type" con="text/html; charset=utf-8" />
-    <title>论坛</title>
+    <title>论坛首页</title>
     <link rel="stylesheet" type="text/css" media="screen" href="css/swiper.css" />
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
     <link href="css/pagination.css" rel="stylesheet">
     <link rel="stylesheet" href="css/base.css">
@@ -487,13 +487,15 @@
     <script type="text/javascript" src="js/swiper-3.4.2.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/footer.js"></script>
-    <script language="javascript"> 
+    <script language="javascript">
+        /* 轮播图初始化 */
         var mySwiper = new Swiper('.swiper-container', {
-            pagination: '.swiper-pagination',
-            prevButton: '.swiper-button-prev',
-            nextButton: '.swiper-button-next',
-        })
-        jQuery('#microblog').click(function () {
+                pagination: '.swiper-pagination',
+                prevButton: '.swiper-button-prev',
+                nextButton: '.swiper-button-next',
+            })
+            /* 点击按钮链接微博 */
+        jQuery('#microblog').click(function() {
             location.href = 'https://weibo.com/asu001';
         })
     </script>
