--- a/线框图jpg/论坛_07_04/论坛_0705/论坛首页.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/论坛首页.html
@@ -59,7 +59,7 @@
                     </li>
                     <li>
                         <div class="login_holder">
-                            <a href="#">登录</a>|
+                            <a href="个人资料.html">登录</a>|
                             <a href="#">注册</a>
                         </div>
                     </li>
