下拉菜单完成

--- a/线框图jpg/论坛_07_04/论坛_0705/cast_ii_社区.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/cast_ii_社区.html
@@ -5,7 +5,6 @@
     <meta http-equiv="con-Type" con="text/html; charset=utf-8" />
     <title>cast_ii_社区</title>
     <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/swiper.css" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="css/pagination.css" rel="stylesheet">
     <link rel="stylesheet" href="css/base.css">
@@ -108,24 +107,34 @@
                             <button type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">全部主题
                                 <span class="caret all_caret"></span>
                             </button>
-                            <ul class="dropdown-menu">
-                                ...
+                            <ul class="dropdown-menu spinner">
+                                <li><a href="javascropt:;">全部主题</a></li>
+                                <li><a href="javascropt:;">活动</a></li>
                             </ul>
                         </div>
                         <div class="nav_btn">
-                            <button type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">全部时间
+                            <button class="spinner_btn" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">全部时间
                                 <span class="caret all_caret"></span>
                             </button>
-                            <ul class="dropdown-menu">
-                                ...
-                            </ul>
-                        </div>
-                        <div class="nav_btn">
-                            <button type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 全部排序
-                                <span class="caret all_caret"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                ...
+                            <ul class="dropdown-menu spinner">
+                                <li>
+                                    <a href="javascropt:;">全部时间</a>
+                                </li>
+                                <li>
+                                    <a href="javascropt:;">一天</a>
+                                </li>
+                                <li>
+                                    <a href="javascropt:;">两天</a>
+                                </li>
+                                <li>
+                                    <a href="javascropt:;">一周</a>
+                                </li>
+                                <li>
+                                    <a href="javascropt:;">一个月</a>
+                                </li>
+                                <li>
+                                    <a href="javascropt:;">三个月</a>
+                                </li>
                             </ul>
                         </div>
                         <div class="pull-right">
@@ -460,6 +469,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/footer.js"></script>
+    <script src="js/base.js"></script>
 </body>
 
 </html>
