--- a/线框图jpg/论坛_07_04/论坛_0705/开发者论坛.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/开发者论坛.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 <meta http-equiv="con-Type" con="text/html; charset=utf-8" />
-<title>论坛首页</title> 
-<link rel="stylesheet" type="text/css" media="screen" href="css/swiper-3.4.2.min.css" />
+<title>开发者论坛</title>
 <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="css/base.css">
  <link rel="stylesheet" href="css/forum1.css">
