--- a/线框图jpg/论坛_07_04/论坛_0705/技术支持.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/技术支持.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 <meta http-equiv="con-Type" con="text/html; charset=utf-8" />
-<title>论坛</title> 
-<link rel="stylesheet" type="text/css" media="screen" href="css/swiper.css" />
+<title>技术支持</title>
 <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
 <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
 <link href="css/pagination.css" rel="stylesheet">
