--- a/线框图jpg/论坛_07_04/论坛_0705/消息.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/消息.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="con-Type" con="text/html; charset=utf-8" />
-    <title>用户中心</title>
+    <title>消息</title>
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="css/base.css">
