--- a/线框图jpg/论坛_07_04/论坛_0705/规则.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/规则.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 <meta http-equiv="con-Type" con="text/html; charset=utf-8" />
-<title>论坛</title>
+<title>规则</title>
 <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
-<link rel="stylesheet" type="text/css" media="screen" href="css/swiper.css" />
 <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="css/active.css"> 
 <link href="dist/summernote.css" rel="stylesheet">
