PC收尾，手机首页开始

--- a/线框图jpg/论坛_07_04/论坛_0705/PC暂时不用HTML/帖子详情.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/PC暂时不用HTML/帖子详情.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="con-Type" con="text/html; charset=utf-8" />
-<title>论坛首页</title> 
+<title>帖子详情</title> 
 <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="css/base.css">
 <link rel="stylesheet" href="css/details.css">  
