--- a/线框图jpg/论坛_07_04/论坛_0705/cast_ii_社区.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/cast_ii_社区.html
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li class="active">
-                        <a href="cast_ii_社区.html">Cast II 社区
+                        <a href="cast_ii_社区.html">ASU Watch 社区
                             
                         </a>
                     </li>
@@ -76,7 +76,7 @@
                             <a href="#" target="_blank">
                                 <img src="img/cast_title.png" />
                             </a>
-                            <a class="cast2_title h1" href="#" target="_blank">Cast II</a>
+                            <a class="cast2_title h1" href="#" target="_blank">ASU Watch</a>
                         </div>
 
                     </div>
