--- a/线框图jpg/论坛_07_04/论坛_0705/移动版HTML/m_板块首页.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/移动版HTML/m_板块首页.html
@@ -10,7 +10,7 @@
     <link href="../font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
     <link href="../css/pagination.css" rel="stylesheet"><!--分页插件 -->
     <link rel="stylesheet" href="../css/m_css/m_base.css">
-    <link rel="stylesheet" href="../css/m_css/m_home.css">
+    <link rel="stylesheet" href="../css/m_css/m_forum.css">
 </head>
 
 <body>
@@ -24,49 +24,13 @@
     </header>
     <!-- 页眉**结束 -->
 
-    <!-- 筛选菜单**开始 -->
-    <div class="clearfix screen">
-        <div class="nav_btn">
-            <button class="spinner_btn" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">全部主题
-                <span class="caret all_caret"></span>
-            </button>
-            <ul class="dropdown-menu spinner">
-                <li><a href="javascropt:;">全部主题</a></li>
-                <li><a href="javascropt:;">活动</a></li>
-            </ul>
-        </div>
-        <div class="nav_btn">
-            <button class="spinner_btn" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">全部时间
-                <span class="caret all_caret"></span>
-            </button>
-            <ul class="dropdown-menu spinner">
-                <li>
-                    <a href="javascropt:;">全部时间</a>
-                </li>
-                <li>
-                    <a href="javascropt:;">一天</a>
-                </li>
-                <li>
-                    <a href="javascropt:;">两天</a>
-                </li>
-                <li>
-                    <a href="javascropt:;">一周</a>
-                </li>
-                <li>
-                    <a href="javascropt:;">一个月</a>
-                </li>
-                <li>
-                    <a href="javascropt:;">三个月</a>
-                </li>
-            </ul>
-        </div>
-
-        <div class="pull-right screen-right">
-            <a class="active-orange" href="javascript:;">最新</a>
-            <a class="left-border" href="javascript:;">精华</a>
-        </div>
+    <!-- 板块标题**开始 -->
+    <div class="clearfix forum">
+          
+                    <img class="forum-logo" src="../img/cast_title.png" />
+                    <span class="forum-title" href="#" target="_blank">ASU Watch</span>
     </div>
-    <!-- 筛选菜单**结束 -->
+    <!-- 板块标题**结束 -->
     
     <!--帖子列表**开始 -->
     <div class="container content">
@@ -191,15 +155,13 @@
             <span class="active-grey">手机版</span>
             <span>客户端</span>
         </div>
-    </footer>
-    <nav>
         <ul>
             <li class="right-border back"><i class="fa fa-angle-left" aria-hidden="true"></i></li>
             <li class="right-border"><i class="fa fa-bars" aria-hidden="true"></i>板块</li>
             <li class="right-border"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>发帖</li>
             <li class="active-orange"><i class="fa fa-user-o" aria-hidden="true"></i>登录</li>
         <ul>
-    </nav>
+    </footer>
     <!-- 底部**结束 -->
 
     <script src="../js/jquery.min.js"></script>
