--- a/线框图jpg/论坛_07_04/论坛_0705/移动版HTML/m_注册.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/移动版HTML/m_注册.html
@@ -51,16 +51,21 @@
         </div>
         <div class="f10 text-center">Beijing ASU Tech Co.Ltd.北京一数科技有限公司 京ICP备15036919号-1</div>
     </footer>
+   
     <nav>
-            <a class="right-border col-xs-4 col-sm-4">
+            <a id="forum" class="right-border col-xs-4 col-sm-4" href="javascript:;">
                 <i class="fa fa-bars" aria-hidden="true"></i>板块
-                <div class="hide-menu"></div>
             </a>
             <a class="right-border col-xs-4 col-sm-4" href="m_看帖.html"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>发帖</a>
-            <a class="col-xs-4 col-sm-4 act-grey"><i class="fa fa-user-o" aria-hidden="true"></i>登录</a>
+            <a class="col-xs-4 col-sm-4 act-grey" href="javascript:;"><i class="fa fa-user-o" aria-hidden="true"></i>登录</a>
+            <div class="hide-menu">
+                    <a href="javascript:;">ASU Watch社区</a>
+                    <a href="javascript:;">活动</a>
+                    <a href="javascript:;">服务</a>
+            </div>
     </nav>
     <!-- 底部**结束 -->
-
+    
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/base.js"></script>
