--- a/线框图jpg/论坛_07_04/论坛_0705/移动版HTML/m_论坛首页.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/移动版HTML/m_论坛首页.html
@@ -17,7 +17,7 @@
     <!-- 页眉**开始 -->
     <header class="clearfix">
         <div class="pull-left"> 
-            <a href="#"><img class="logo" alt="Brand" src="../img/logo.png"></a>
+            <a href="#"><img class="logo" alt="Brand" src="../img/logo-01.png"></a>
             一数社区
         </div>
         <i class="fa fa-search fa-pull-right" aria-hidden="true"></i>
@@ -137,70 +137,38 @@
                         </div>
                     </div>
                 </div>
-                
-
-        <!--分页导航**开始 -->
-        <div class="text-center">
-            <table class="pagination">
-                <tr>
-                    <td>
-                        <div class="circle orange  ">
-                            <i class="fa fa-angle-double-left" aria-hidden="true"></i>
-                        </div>
-                    </td>
-
-                    <td>
-                        <div class="circle orange-bg pagination-active">
-                            1
-                        </div>
-                    </td>
-
-                    <td>
-                        <div class="circle orange  ">
-                            2
-                        </div>
-                    </td>
-                    <td>
-                        <div class="circle orange  ">
-                            3
-                        </div>
-                    </td>
-
-                    <td>
-                        <div class="circle orange  ">
-                            4
-                        </div>
-                    </td>
-                    <td>
-                        <div class="circle orange">
-                            <i class="fa fa-angle-double-right" aria-hidden="true"></i>
-                        </div>
-                    </td>
-                </tr>
-            </table>
-        </div>
-        <!--分页导航**结束 -->
-
     </div>
     <!--帖子列表**结束 -->
 
     <!-- 底部**开始 -->
     <footer>
         <div class="text-center">
-            <span>电脑版</span>
-            <span class="active-grey">手机版</span>
-            <span>客户端</span>
+            <a class="black-border" href="javascript:;">常见问题</a>
+            <a href="javascript:;">返回官网</a>
         </div>
+        <div class="f10 text-center">Beijing ASU Tech Co.Ltd.北京一数科技有限公司 京ICP备15036919号-1</div>
     </footer>
+   
     <nav>
-        <ul>
-            <li class="right-border back"><i class="fa fa-angle-left" aria-hidden="true"></i></li>
-            <li class="right-border"><i class="fa fa-bars" aria-hidden="true"></i>板块</li>
-            <li class="right-border"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>发帖</li>
-            <li class="active-orange"><i class="fa fa-user-o" aria-hidden="true"></i>登录</li>
-        <ul>
+            <a id="forum" class="right-border col-xs-4 col-sm-4" href="javascript:;">
+                <i class="fa fa-bars" aria-hidden="true"></i>板块
+            </a>
+            <a class="right-border col-xs-4 col-sm-4" href="m_看帖.html"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>发帖</a>
+            <a class="col-xs-4 col-sm-4 act-grey" href="javascript:;"><i class="fa fa-user-o" aria-hidden="true"></i>登录</a>
+            <div class="hide-menu">
+                    <a href="javascript:;">ASU Watch社区</a>
+                    <a href="javascript:;">活动</a>
+                    <a href="javascript:;">服务</a>
+            </div>
     </nav>
     <!-- 底部**结束 -->
+
+    <!-- 回到顶部**开始 -->
+    <div id="to_top" title="回到顶部">
+            <i class="fa fa-angle-up" aria-hidden="true"></i>
+    </div>
+    <!-- 回到顶部**结束 -->
+    
 
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
