--- a/线框图jpg/论坛_07_04/论坛_0705/移动版HTML/m_个人资料.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/移动版HTML/m_个人资料.html
@@ -13,16 +13,15 @@
 </head>
 
 <body>
-    <!-- 页眉**开始 -->
-    <header class="clearfix">
+  <!-- 页眉**开始 -->
+  <header class="clearfix">
         <div class="pull-left"> 
-            <a href="#"><img class="logo" alt="Brand" src="../img/logo.png"></a>
+            <a href="#"><img class="logo" alt="Brand" src="../img/logo-01.png"></a>
             一数社区
         </div>
-        <i class="fa fa-search fa-pull-right" aria-hidden="true"><img src="../img/li_1.png" /></i>
+        <i class="fa fa-search fa-pull-right" aria-hidden="true"></i>
     </header>
     <!-- 页眉**结束 -->
-
     <!-- 头像区**开始 -->
     <div class="main-info">
            <div class="info-user-img pull-left"> <img src="../img/li_1.png" /></div>
