--- a/线框图jpg/论坛_07_04/论坛_0705/移动版HTML/m_活动.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/移动版HTML/m_活动.html
@@ -28,7 +28,7 @@
     <div class="clearfix forum">
           
                     <img class="forum-logo" src="../img/cast_title.png" />
-                    <span class="forum-title" href="#" target="_blank">ASU Watch</span>
+                    <span class="forum-title" href="#" target="_blank">活动</span>
     </div>
     <!-- 板块标题**结束 -->
     
