--- a/线框图jpg/论坛_07_04/论坛_0705/移动版HTML/m_设置密码.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/移动版HTML/m_设置密码.html
@@ -18,30 +18,19 @@
     <div class="panel panel-default">
             <div class="panel-body">
                 <div >
-                    <div class="col-gray"><strong class="orange">注册</strong></div>
+                    <div class="col-gray"><strong class="orange">设置密码</strong></div>
                 </div> 
-                <div >
-                    <input type="text" class="form-control-bottom"  placeholder="手机号码" name="phone" id="phone" value="" />
-                </div> 
-                <div >
-                    <input type="text" class="form-control-bottom"  placeholder="短信验证码" name="code" id="code" value="" />
-                </div> 
+      
                 <div >
                     <input type="text" class="form-control-bottom"  placeholder="密码" name="pwd1" id="pwd1" value="" />
                 </div> 
                 <div >
-                    <input type="text" class="form-control-bottom"  placeholder="确认密码" name="pwd2" id="pwd2" value="" />
-                </div> 
+                    <input type="text" class="form-control-bottom"  placeholder="再次输入密码" name="pwd2" id="pwd2" value="" />
+                </div>
                 <div >
-                    <input type="text" class="form-control-bottom"  placeholder="电子邮箱" name="email" id="email" value="" />
-                </div> 
-                <div class="col-protocal ">
-                    <input type="checkbox" id="protocal_check"/> 我已阅读并遵守..
-                </div> 
-                 <div >
-                    <button type="submit" class="btn btn_submit" >提交</button>
-
-                </div> 
+                        <button type="submit" class="btn btn_submit" >提交</button>
+    
+                    </div>
             </div><!--end panel-body -->
           </div><!--end panel-panel -->
 
