--- a/线框图jpg/论坛_07_04/论坛_0705/移动版HTML/m_论坛首页.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/移动版HTML/m_论坛首页.html
@@ -143,6 +143,8 @@
     <!-- 底部**开始 -->
     <footer>
         <div class="text-center">
+            <a class="black-border" href="javascript:;">电脑版</a>
+            <a class="black-border active-grye" href="javascript:;">手机版</a>
             <a class="black-border" href="javascript:;">常见问题</a>
             <a href="javascript:;">返回官网</a>
         </div>
@@ -150,22 +152,43 @@
     </footer>
    
     <nav>
-            <a id="forum" class="right-border col-xs-4 col-sm-4" href="javascript:;">
-                <i class="fa fa-bars" aria-hidden="true"></i>板块
-            </a>
-            <a class="right-border col-xs-4 col-sm-4" href="m_看帖.html"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>发帖</a>
-            <a class="col-xs-4 col-sm-4 act-grey" href="javascript:;"><i class="fa fa-user-o" aria-hidden="true"></i>登录</a>
-            <div class="hide-menu">
-                    <a href="javascript:;">ASU Watch社区</a>
-                    <a href="javascript:;">活动</a>
-                    <a href="javascript:;">服务</a>
-            </div>
+        <a id="forum" class="right-border col-xs-4 col-sm-4" href="javascript:;">
+            <i class="fa fa-bars" aria-hidden="true"></i>板块
+        </a>
+        <a class="right-border col-xs-4 col-sm-4" href="m_看帖.html">
+            <i class="fa fa-pencil-square-o" aria-hidden="true"></i>发帖</a>
+        <a class="col-xs-4 col-sm-4 act-grey" href="javascript:;">
+            <svg version="1.1" id="icon-user" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                viewBox="-207 208 85 85" style="enable-background:new -207 208 85 85;" xml:space="preserve">
+                <style type="text/css">
+                    .st0 {
+                        fill: #fff;
+                        stroke: #fff;
+                        width: 100%;
+                        height: 100%;
+                    }
+                </style>
+                <g id="XMLID_1496_">
+                    <path id="XMLID_1499_" class="st0" d="M-155,251.4c5.6-3.3,9.4-9.3,9.4-16.2c0-10.4-8.5-18.9-18.9-18.9s-18.9,8.5-18.9,18.9
+                           c0,10.3,8.3,18.7,18.6,18.8c0.1,0,0.2,0.1,0.2,0.1c12.6,0,23.6,8.9,26.5,21H-191c1.6-6.5,5.4-12.2,10.9-16.1c0.9-0.7,1.2-2,0.5-2.9
+                           c-0.7-0.9-2-1.2-2.9-0.5c-7.1,5-11.9,12.7-13.1,21.3c-0.1,0.6,0.1,1.2,0.5,1.7s1,0.7,1.6,0.7h58c0.6,0,1.2-0.3,1.6-0.7
+                           c0.4-0.5,0.6-1.1,0.5-1.7C-135.1,264.8-143.8,255-155,251.4L-155,251.4z M-179.1,235.2c0-8.1,6.6-14.7,14.7-14.7
+                           c8.1,0,14.7,6.6,14.7,14.7s-6.6,14.7-14.7,14.7S-179.1,243.3-179.1,235.2L-179.1,235.2z" />
+                </g>
+            </svg> 登录</a>
+        <div class="hide-menu">
+            <a href="javascript:;">ASU Watch社区</a>
+            <a href="javascript:;">活动</a>
+            <a href="javascript:;">服务</a>
+        </div>
     </nav>
     <!-- 底部**结束 -->
 
     <!-- 回到顶部**开始 -->
     <div id="to_top" title="回到顶部">
-            <i class="fa fa-angle-up" aria-hidden="true"></i>
+            <i class="fa fa-angle-up" aria-hidden="true">
+                
+            </i>
     </div>
     <!-- 回到顶部**结束 -->
     
