--- a/线框图jpg/论坛_07_04/论坛_0705/移动版HTML/m_活动.html
+++ b/线框图jpg/论坛_07_04/论坛_0705/移动版HTML/m_活动.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>移动版论坛首页</title>
+    <title>一数论坛活动</title>
     <meta http-equiv="con-Type" con="text/html; charset=utf-8" />
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
     <meta content="yes" name="apple-mobile-web-app-capable"/><!-- 删除默认的苹果工具栏和菜单栏 -->
